--- a/lavis/projects/blip2/train/pretrain_stage1.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage1.yaml
@@ -11,7 +11,7 @@ model:
 
 
 datasets:
-  coco_caption:
+  flickr30k:
     vis_processor:
         train:
           name: "blip2_image_train"
@@ -19,6 +19,10 @@ datasets:
     text_processor:
         train:
           name: "blip_caption"
+        eval:
+          name: "blip_caption"
+        
+
 #     build_info:
 #         images:
 #             storage: '/export/share/datasets/vision/coco/images/'          
@@ -43,14 +47,14 @@ run:
   warmup_lr: 1e-6
 
   weight_decay: 0.05
-  max_epoch: 10
+  max_epoch: 2
   batch_size_train: 25
   batch_size_eval: 16
   num_workers: 4
   warmup_steps: 5000
 
   seed: 42
-  output_dir: "output/BLIP2/Pretrain_stage1"
+  output_dir: "/content/output/BLIP2/Pretrain_stage1"
 
   amp: True
   resume_ckpt_path: null
