--- a/lavis/projects/blip2/eval/eval_flicker30k.yaml
+++ b/lavis/projects/blip2/eval/eval_flicker30k.yaml
@@ -5,7 +5,7 @@
 
 model:
   arch: blip2_Japanese
-  model_type: coco
+  model_type: pretrain
   use_grad_checkpoint: False
 
 datasets:
@@ -13,7 +13,7 @@ datasets:
     vis_processor:
         eval:
           name: "blip_image_eval"
-          image_size: 364
+          image_size: 224
     text_processor:
         eval:
           name: "blip_caption"
