--- a/lavis/projects/blip2/train/pretrain_stage2.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage2.yaml
@@ -14,13 +14,15 @@ model:
 
 
 datasets:
-  coco_caption:
+  flickr30k:
     vis_processor:
         train:
           name: "blip2_image_train"
           image_size: 224
     text_processor:
         train:
+          name: "blip_caption"
+        eval:
           name: "blip_caption"
     # build_info:
     #     images:
@@ -46,14 +48,14 @@ run:
   warmup_lr: 1e-6
 
   weight_decay: 0.05
-  max_epoch: 10
+  max_epoch: 2
   batch_size_train: 25
   batch_size_eval: 16
   num_workers: 4
   warmup_steps: 2000
 
   seed: 42
-  output_dir: "output/BLIP2/Pretrain_stage2"
+  output_dir: "/content/output/BLIP2/Pretrain_stage2"
 
   amp: True
   resume_ckpt_path: null
