--- a/lavis/configs/datasets/flickr30k/defaults.yaml
+++ b/lavis/configs/datasets/flickr30k/defaults.yaml
@@ -11,14 +11,14 @@ datasets:
     build_info:
       annotations:
         train:
-          url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_train.json
-          storage: /content/flicker30k/annotations/train.json
+          #url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_train.json
+          storage: /content/drive/MyDrive/Ahmed/annotation_in_arabic/Arabic_train.json
         val:
-          url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_val.json
-          storage: /content/flicker30k/annotations/val.json
+          #url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_val.json
+          storage: /content/drive/MyDrive/Ahmed/annotation_in_arabic/Arabic_val.json
         test:
-          url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_test.json
-          storage: /content/flicker30k/annotations/test.json
+          #url: https://storage.googleapis.com/sfr-vision-language-research/datasets/flickr30k_test.json
+          storage: /content/drive/MyDrive/Ahmed/annotation_in_arabic/Arabic_test.json
       images:
           storage: /content/flicker30k/images
           # storage: /export/share/datasets/vision/flickr30k
